Videochat conf angular: fix chat scroll on mobile (#150)

--- a/videochat-conf-angular/src/app/components/videochat/sidebar-templates.scss
+++ b/videochat-conf-angular/src/app/components/videochat/sidebar-templates.scss
@@ -24,6 +24,7 @@
 
   app-stream-container {
     max-height: 20%;
+    flex: 0 0 20%;
   }
 }
 
@@ -32,7 +33,7 @@
   height: 100%;
   width: 100%;
   grid-auto-columns: 1fr;
-  background-color: #282C34;
+  background-color: #282c34;
 }
 
 @media screen and(max-width: 767px) {
